--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,7 +1,10 @@
-<h1>Articles Tagged with <%= @tag.name %></h1>
+<h1>Articles tagged '<%= @tag.name %>'</h1>
 
 <ul>
-    <% @tag.articles.each do |article| %>
-        <li><%= link_to article.title, article_path(article) %></li>
-    <% end %>
+  <% @tag.articles.each do |article| %>
+    <li><%= link_to article.title, article_path(article) %></li>
+  <% end %>
 </ul>
+
+<%= link_to "View tags", tags_path %>
+<%= link_to "View articles", articles_path %>
