--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit Article</h1>
+<h1>Edit an article</h1>
 
-<%= render partial: 'form' %>
+<%= render partial: "form" %>
+
+<%= link_to "Back", article_path(@article) %>
