--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,5 @@
 <h1>Create a New Article</h1>
 
-<%= render partial: 'form' %>
+<%= render partial: "form" %>
+
+<%= link_to "Back", articles_path %>
