--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,15 @@
-<h3>Post a comment</h3>
+<h3>Post a Comment</h3>
+
 <%= form_for [@article, @comment] do |f| %>
-    <p>
-        <%= f.label "Your Name" %></br>
-        <%= f.text_field :author_name %>
-    </p>
-    <p>
-        <%= f.label "Your Comment" %></br>
-        <%= f.text_area :body %>
-    </p>
-    <p>
-        <%= f.submit 'submit' %>
-    </p>
+  <p>
+    <%= f.label :author_name, "Your Name" %><br>
+    <%= f.text_field :author_name %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
 <% end %>
